--- a/Stylesheets/Homepage.css
+++ b/Stylesheets/Homepage.css
@@ -20,7 +20,7 @@ nav{
   border:3px solid #087975;
   border-radius: 50px;
   margin: 0px;
-  padding:10px;
+  padding:20px 0px;
   position:relative;
 }
 nav a{
