--- a/Stylesheets/info.css
+++ b/Stylesheets/info.css
@@ -78,12 +78,13 @@ section img {
 }
 .button{
   text-align:center;
-  padding:6px;
+  padding:15px;
   border:2px solid #a30f76bb;
   text-decoration: none;
   border-radius: 10px;
   margin:2px;
   color:#a30f76bb;
+  font-size:24px;
 }
 .button:hover,.box-1{
   color:white;
