--- a/Stylesheets/info_3.css
+++ b/Stylesheets/info_3.css
@@ -21,6 +21,7 @@ nav{
   border-radius: 50px;
   margin: 0px;
   padding:20px 50px;
+  font-size:50px
   position:relative;
 }
 nav a{
@@ -28,7 +29,7 @@ nav a{
   text-align-last: Center;
   text-decoration: none;
   font-size: 40px;
-  padding:20px;
+  padding:15px;
 }
 nav a:hover{
   background-color: white;
