--- a/Stylesheets/Homepage.css
+++ b/Stylesheets/Homepage.css
@@ -61,6 +61,9 @@ nav a:active{
         .emoji {
             font-size: 20px;
             margin-top: 10px;
+            position:relative;
+            text-align: center;
+            justify-content: center;
         }
 .one{
   border-radius: 10px;
